# second-brain

./: .gitignore
.kiro/hooks/: raw-ingest-alert.kiro.hook  wiki-graph-rebuild.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: context.md  ingest.md  lint.md  output.md  query.md
.obsidian/: graph.json
.scripts/: build_graph.py  graph_tools.py  wiki_graph_mcp.py
.scripts/llm-wiki-mcp/: LICENSE  README.md  ROADMAP.md  pyproject.toml
.scripts/llm-wiki-mcp/src/llm_wiki_mcp/: __init__.py  graph.py  server.py
.templates/: article-clipper.json  book-clipper.json  podcast-clipper.json  research-clipper.json  youtube-clipper.json
01_raw/: .steering.md
01_raw/articles/: 2026-04-14_LLM-Wiki - LLM을 활용하여 개인 지식저장소 구축 하기.md  2026-04-30_01-1. Hermes Agent란 무엇인가.md  2026-04-30_01-2. 왜 Hermes Agent인가.md  2026-04-30_666ghjMiroFish A Simple and Universal Swarm Intelligence Engine, Predicting An.md  2026-04-30_Agentic Researcher 수학 및 머신러닝 분야에서 인공지능 도구들을 활용하는 현실적인 연구 방법에 대한 논문.md  2026-04-30_AutoResearchClaw 아이디어를 기반으로 학술 논문을 완성하는 완전 자율 AI 연구 에이전트.md  2026-04-30_Claude Code 구축에서 얻은 교훈 프롬프트 캐싱이 전부임.md  2026-04-30_Gemma 4 비주얼 가이드.md  2026-04-30_HKUDSOpenHarness OpenHarness Open Agent Harness with a Built-in Personal Age.md  2026-04-30_MiroFish 뜯어보기(1) - 이론편  문서 하나로 수천 명의 가상 인간을 시뮬레이션하는 집단 지능 엔진.md  2026-04-30_OpenHarness Claude Code보다 44배 가벼운 Python 기반 오픈소스 AI 에이전트 하네스 프레임워크 (feat. HKUDS.md  2026-04-30_UNIST AI 학습 데이터에 설명문 붙여 딥러닝 블랙박스 해독.md  (+3 more)
02_wiki/: .steering.md  index.md  log.md
03_output/: .steering.md
setting-and-guide/: llm-wiki-workflow-scenario.md  나의 핵심 맥락.md
(+64 files in other folders)
