[project]
name = "llm-wiki-mcp"
version = "0.1.0"
description = "MCP server for Karpathy-style LLM Wiki — turn your markdown notes into an AI-powered knowledge graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Myungro Lee", email = "leeroy7321@gmail.com"},
]
keywords = ["mcp", "knowledge-graph", "wiki", "obsidian", "second-brain", "pkm", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastmcp>=3.0.0",
]

[project.scripts]
llm-wiki-mcp = "llm_wiki_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mengro1102/llm-wiki-mcp"
Repository = "https://github.com/mengro1102/llm-wiki-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
